--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -99,7 +99,8 @@ The lattice kinetic Monte Carlo method relies on a pre-defined lattice of stable
 
 The transition state theory is usually used in chemistry to explain the kinetics of a reaction. To do so it compares the energy of the reactants before reacting and the one of the transition state to calculate the rate of the reaction. And it defines a reaction kinetic rate that explains the kinetics of a reaction.
 
-In our case, we want to study the transition from a pore to another one by transitioning through a channel. It is also possible to define a diffusion rate that connects the adsorption sites of the pores. \todo{Bennet-Chandler approach}
+In our case, we want to study the transition from a pore to another one by transitioning through a channel. It is also possible to define a diffusion rate that connects the adsorption sites of the pores. 
+\todo{Bennet-Chandler approach}\autocite{BENNETT1977}
 
 \todo{what is a transition state for diffusion?}
 
