--- a/thesis.bib
+++ b/thesis.bib
@@ -3533,3 +3533,14 @@ URL = {https://doi.org/10.1137/0216006},
   year={2002},
   publisher={Elsevier}
 }
+@incollection{BENNETT1977,
+  doi = {10.1021/bk-1977-0046.ch004},
+  url = {https://doi.org/10.1021/bk-1977-0046.ch004},
+  year = {1977},
+  month = jun,
+  publisher = {{AMERICAN} {CHEMICAL} {SOCIETY}},
+  pages = {63--97},
+  author = {CHARLES H. BENNETT},
+  title = {Molecular Dynamics and Transition State Theory: The Simulation of Infrequent Events},
+  booktitle = {{ACS} Symposium Series}
+}
