--- a/thesis.bib
+++ b/thesis.bib
@@ -3544,3 +3544,16 @@ URL = {https://doi.org/10.1137/0216006},
   title = {Molecular Dynamics and Transition State Theory: The Simulation of Infrequent Events},
   booktitle = {{ACS} Symposium Series}
 }
+@article{Sharma_2023,
+	doi = {10.1080/08927022.2023.2202757},
+	url = {https://doi.org/10.1080%2F08927022.2023.2202757},
+	year = 2023,
+	month = {may},
+	publisher = {Informa {UK} Limited},
+	volume = {49},
+	number = {9},
+	pages = {893--953},
+	author = {Shrinjay Sharma and Salvador R. G. Balestra and Richard Baur and Umang Agarwal and Erik Zuidema and Marcello S. Rigutto and Sofia Calero and Thijs J. H. Vlugt and David Dubbeldam},
+	title = {{RUPTURA}: simulation code for breakthrough, ideal adsorption solution theory computations, and fitting of isotherm models},
+	journal = {Molecular Simulation}
+}
