--- a/cover.tex
+++ b/cover.tex
@@ -8,11 +8,11 @@
 \specialty{Chimie Physique}
 \date{XX Septembre 2023}
 
-\jurymember{1}{Sof{\'{i}}a \textsc{Calero}}{Professeure, Eindhoven University of Technology}{Rapportrice}
-\jurymember{2}{Rochus \textsc{Schmid}}{Professeur, Ruhr-University Bochum}{Rapporteur}
+\jurymember{1}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Présidente du jury}
+\jurymember{2}{Sof{\'{i}}a \textsc{Calero}}{Professeure, Eindhoven University of Technology}{Rapportrice}
 \jurymember{3}{Magali \textsc{Benoit}}{Directrice de Recherche, Université de Toulouse}{Rapportrice}
-\jurymember{4}{Michael \textsc{Badawi}}{Maître de Conférences, Université de Lorraine}{Rapporteur}
-\jurymember{5}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Role}
+\jurymember{4}{Corentin \textsc{Macqueron}}{Expert simulation physique et Référent IA, Orano}{Membre du jury}
+\jurymember{5}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Membre du jury}
 \jurymember{6}{François-Xavier \textsc{Coudert}}{Directeur de Recherche, Chimie ParisTech}{Directeur de thèse}
 
 \frabstract{
