--- a/main.tex
+++ b/main.tex
@@ -82,9 +82,9 @@
 \usepackage[
     pdfusetitle,
     pdfauthor={Emmanuel Ren},
-    pdftitle={Atomistic models and properties of amorphous metal-organic frameworks for CO2 separation}, 
+    pdftitle={Screening of the microscopic origins of Xe/Kr separation in nanoporous materials}, 
     pdfsubject={PhD thesis},
-    pdfkeywords={molecular simulation, flexible porous materials, xxx}, %TODO copy from cover when done
+    pdfkeywords={molecular simulation, nanoporous materials, high-throughput screening, adsorption, machine learning}, 
     hyperfootnotes=false,
 ]{hyperref}
 
@@ -382,7 +382,7 @@
 \logootherinstitute{figures/psl/logo-cea.pdf}
 
 \title{Origines microscopiques de la séparation xénon/krypton dans les matériaux nanoporeux}
-\entitle{Microscopic origins of the xenon/krypton separation in nanoporous materials}
+\entitle{Screening of the microscopic origins of Xe/Kr separation in nanoporous materials}
 \author{Emmanuel \textsc{Ren}}
 
 \input{cover}
