--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -312,11 +312,13 @@ By carrying out a similar analysis than for the surface areas bu for the void fr
 
 \subsubsection{Pore Size and selectivity}
 
+The ideal pore size for the xenon krypton separation can be deduced from the Figure~\ref{fgr:lcd}. On the right plot we can see that the most selective materials have a pore size near \SI{5}{\angstrom}. However, it is hard to distinguish between the ver low selectivity materials that have a similar label color. To see the difference, we plotted with different colors the structures with $D_i$ between $3.6$ and $11.6$~\si{\angstrom}. And we can see clearly that the pore size needs to be around \SI{5}{\angstrom} but if it is too low (near \SI{4.5}{\angstrom}), the selectivity drops significantly. Hence, there is a sweet spot of pore size values that enable very high selectivity.
+
 \begin{figure}[h!]
   \centering
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_lcd.pdf}
   \includegraphics[width=0.48\textwidth]{figures/2-thermo/Scatterplot_uptake_selectivity_lcd_zoom.pdf}
-  \caption{Scatterplot of the xenon uptake as a function of the selectivity (20:80) and labeled by the values of LCD\e{UFF} (left). The same scatterplot restricted to values of $D_i$ between ($3.6$ and $11.6$~\si{\angstrom}) and labeled using a different color code to distinguish the most selective materials from the least selective ones. The most selective materials are colored in orange corresponding to a pore size adapted for xenon adsorption (around $5$~\si{\angstrom}). The least selective ones are in green, with a pore lower than the size of a xenon hence preventing its adsorption.}\label{fgr:vol}
+  \caption{Scatterplot of the xenon uptake as a function of the selectivity (20:80) and labeled by the values of LCD\e{UFF} (left). The same scatterplot restricted to values of $D_i$ between ($3.6$ and $11.6$~\si{\angstrom}) and labeled using a different color code to distinguish the most selective materials from the least selective ones. The most selective materials are colored in orange corresponding to a pore size adapted for xenon adsorption (around $5$~\si{\angstrom}). The least selective ones are in green, with a pore lower than the size of a xenon hence preventing its adsorption.}\label{fgr:lcd}
 \end{figure}
 
 If we now look at the joint effects of the void fraction and the largest cavity diameter ($D_i$) on the selectivity, we can note that the most selective materials are located in a very particular domain of this bidimensional descriptor space. On Figure~\ref{fgr:lcd_vf}, the structures with a selectivity over $10$ are very likely to have a void fraction under $0.4$ with a rather wide range of $D_i$. However, as we can see on the filtered version of the plot (on the right), the most selective materials (over $40$) exist, on the other hand, in a very narrow range of $D_i$ values between $4.8$ and $6$~\si{\angstrom} approximately. This can be explained by the size of a xenon atom being very close to these $D_i$ values, which allows a maximal stabilization of the xenon that we want to separate from krypton. The krypton being slightly smaller, the interaction with the pores are less favorable, hence explaining the higher selectivity we observe. 
