--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -260,7 +260,7 @@ ML descriptors
 
 \todo{Broaden to the study of collective diffusion, Maxwell-stefan, Onsager, etc.}
 
-\todo{Can be used in breakthrough simulations using RUPTURA\autocite{Sharma_2023} and equations that link the diffusion coefficient to the axial dispersion coefficient a key parameter in the breakthrough modeling.}
+\todo{Can be used in breakthrough simulations using RUPTURA and equations that link the diffusion coefficient to the axial dispersion coefficient a key parameter in the breakthrough modeling.}\autocite{Sharma_2023}
 
 \OnlyInSubfile{\printglobalbibliography}
 
