--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -184,9 +184,15 @@ Requires 2 to 3 restarts. Still some structures did not finish within this time 
 
 \begin{figure*}[t]
 \centering
-  \includegraphics[width=0.8\textwidth]{figures/5-diffusion/D_log-diameter_colored_s_models+.png}
+  \includegraphics[width=0.8\textwidth]{figures/5-diffusion/D_log-diameter_colored_s_+.jpg}
   \caption{Logarithme du coefficient de diffusion du xénon à la limite des basses pressions en fonction du diamètre de la plus petite sphère libre dans le matériau (LCD). Les points sont colorés en fonction du logarithme de la sélectivité à basse pression $\log(s_0)$.}\label{fgr:Diff_Df_s}
 \end{figure*}
+
+Avec la définition UFF.
+
+\todo{VF}
+
+\todo{SA}
 
 
 \subsection{Identification of interesting materials}
